<resources>
    <string name="app_name">Demo</string>
    <string name="calc_bmi">Calculate BMI</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="weighthint">Your weight in pounds</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="i_use">I use</string>
    <string name="android">Android</string>
    <string name="iOS">iOS</string>
    <string name="submit">Submit</string>
    <string name="select_your_avatar">Select Your Avatar</string>
    <string name="display_name">Name: </string>
    <string name="display_email">Email: </string>
    <string name="button_back">Back</string>
    <string name="InClass03">InCLass03</string>
    <string name="InClass02">InClass02</string>
    <string name="InClass01">InClass01</string>
    <string name="Practice">Practice</string>
    <string name="InClass04">InClass04</string>
    <string name="generate_number">Generate Number</string>
    <string name="InClass05">InClass05</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="go">Go</string>
    <string name="loading">Loading</string>
    <string name="InClass06">InClass06</string>
    <string name="Choose_Category">Choose Category</string>
    <string name="choose_country">Choose Country</string>
    <string name="News">News</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_register">Register</string>
    <string name="text_login">Login</string>
    <string name="have_account">Have Account</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="hint_note">Note</string>
    <string name="textview_notes">Note: </string>
    <string name="Name">Name</string>
    <string name="display_emaill">email</string>
    <string name="inclass07">InClass07</string>
    <string name="logout">Logout</string>
    <string name="InClass08">InClass08</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="displayName">Display Name</string>
    <string name="password">Password</string>
    <string name="reenterPassword">Re-Enter Password</string>
    <string name="Welcome">WELCOME</string>
    <string name="welcome">Welcome!</string>
    <string name="welcomeMessage">Hi! We\'re excited to have you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gotoregister">Go To Register</string>
    <string name="NameColon">Name:</string>
    <string name="EmailColon">Email:</string>
    <string name="PhoneColon">Phone:</string>
    <string name="edit">Edit</string>
    <string name="delete" />
    <string name="Delete">Delete</string>
    <string name="Chat" />
    <string name="chat">Chat</string>
    <string name="add">Add</string>
    <string name="New">New</string>
    <string name="chatt">Chat</string>
    <string name="typehere">Type here...</string>
</resources>