<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <ImageButton
        android:id="@+id/button_change_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="131dp"
        android:src="@drawable/avatar_icon"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/i_use"
        android:layout_width="54dp"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="323dp"
        android:text="@string/i_use"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_use">

        <RadioButton
            android:id="@+id/radioButton_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <RadioButton
            android:id="@+id/radioButton_ios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iOS" />
    </RadioGroup>

    <TextView
        android:id="@+id/current_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="252dp"
        android:text="Your current mood: "
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/mood"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mood_seekbar"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:srcCompat="@drawable/angry" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="114dp"
        android:layout_height="61dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_seekbar" />

    <SeekBar
        android:id="@+id/mood_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="303dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:max="@integer/seekbar_max"
        android:progress="3"
        app:layout_constraintEnd_toStartOf="@+id/mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_mood" />

</androidx.constraintlayout.widget.ConstraintLayout>