<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_search_keyword"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:hint="@string/search_keyword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="27dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_search_keyword"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_display"
        android:layout_width="351dp"
        android:layout_height="441dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:background="#ECEBEB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton_previous"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_display"
        app:srcCompat="@drawable/previous" />

    <ImageButton
        android:id="@+id/imageButton_next"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_display"
        app:srcCompat="@drawable/next" />

    <ProgressBar
        android:id="@+id/progressBar_loading_image"
        style="?android:attr/progressBarStyle"
        android:layout_width="202dp"
        android:layout_height="187dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_display" />

    <TextView
        android:id="@+id/textView_loading"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/loading"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_loading_image" />

</androidx.constraintlayout.widget.ConstraintLayout>