<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/display_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_icon" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="298dp"
        android:layout_height="31dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="55dp"
        android:text="@string/display_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_email"
        android:layout_width="292dp"
        android:layout_height="29dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="61dp"
        android:text="@string/display_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_use"
        android:layout_width="161dp"
        android:layout_height="28dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="192dp"
        android:text="I use"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_mood"
        android:layout_width="198dp"
        android:layout_height="31dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="155dp"
        android:text="I am"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/display_mood_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="178dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_mood"
        app:srcCompat="@drawable/happy" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="162dp"
        android:text="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_mood_image" />
</androidx.constraintlayout.widget.ConstraintLayout>